0.0.2) 2012-10-25
  - Added -i flag to set input

0.0.1) 2012-10-24
  - Initial release